<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_column="3">

    <EditText
        android:id="@+id/entry_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:gravity="top"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:hint="@string/entry_edittext_hint"/>
    <EditText
        android:id="@+id/image_url_edittext"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:text="https://pp.vk.me/c628421/v628421540/294d9/ymgfzSnPFxk.jpg"
        android:hint="@string/image_url_edittext_hint" />
    <Button
        android:id="@+id/download_icon_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_image_button_text"
        android:layout_gravity="end"
        android:layout_row="1"
        android:layout_column="2"/>
    <ImageView
        android:id="@+id/image_imageview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_row="2"
        android:layout_column="0"/>
    <EditText
        android:id="@+id/login_edittext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_row="2"
        android:layout_column="1"
        android:hint="@string/login_edittext_hint" />
    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_button_text"
        android:layout_gravity="end"
        android:layout_row="2"
        android:layout_column="2"/>

</GridLayout>
