<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_description_text"
        android:layout_gravity="center_horizontal" />
    <Button
        android:id="@+id/message_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_messagelist_text"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/add_message_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_addmessage_text"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>

